--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "com.vibhorsrv.cameraids"
-        minSdkVersion 28
+        minSdkVersion 26
         targetSdkVersion 30
-        versionCode 11
-        versionName "1.1"
+        versionCode 12
+        versionName "1.2"
     }
 
     buildTypes {
@@ -28,4 +28,5 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation project(':checkroot')
 }
