CameraIDs: Reformat manifest
Change-Id: I7757926f0ae3209e00589053df6c7f0ac1c578b5

--- a/checkroot/src/main/AndroidManifest.xml
+++ b/checkroot/src/main/AndroidManifest.xml
@@ -1,5 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.vibhorsrv.cameraids.checkroot">
-
-    /
-</manifest>
+<manifest package="com.vibhorsrv.cameraids.checkroot"></manifest>
